# wie_app

./: AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: dependabot.yaml  deploy-web.yaml  rust-audit.yaml  rust.yml  web.yaml
tauri/: tauri.conf.json
tauri/src/: lib.rs
wie_tauri/: Cargo.toml
wie_tauri/src/: main.rs
wie_web/: Cargo.toml  package-lock.json  package.json  tsconfig.json  webpack.config.common.ts  webpack.config.dev.ts  webpack.config.prod.ts
wie_web/src/css/: style.css
wie_web/src/html/: index.html
wie_web/src/rust/: audio_sink.rs  database.rs  filesystem.rs  indexed_db_store.rs  lib.rs  util.rs  window.rs
wie_web/src/ts/: database.ts  filesystem.ts  index.ts  indexed_db_store.ts  midi.ts
