[workspace]
resolver = "2"

members = ["wie_web", "tauri"]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "Proprietary"

[profile.dev]
opt-level = 0

[profile.dev.package.wie_core_arm]
opt-level = 1

[profile.dev.package.arm32_cpu]
opt-level = 1

[profile.release]
lto = true
strip = true
