[package]
name = "wie_web"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]
path = "src/rust/lib.rs"

[dependencies]
anyhow = { version = "^1.0" }

console_error_panic_hook = { version = "^0.1" }
time = { version = "^0.3", features = ["wasm-bindgen"] }
tracing-subscriber = { version = "^0.3", features = ["time"] }
tracing-web = { version = "^0.1" }
tracing = { version = "^0.1", default-features = false }
wasm-bindgen = { version = "^0.2" }
js-sys = { version = "^0.3" }
web-sys = { version = "^0.3", features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "ImageData"] }
rodio = { version = "^0.19", features = ["wasm-bindgen"], default-features = false }

wie_backend = { git = "https://github.com/dlunch/wie.git" }
wie_ktf = { git = "https://github.com/dlunch/wie.git" }
wie_lgt = { git = "https://github.com/dlunch/wie.git" }
wie_skt = { git = "https://github.com/dlunch/wie.git" }
wie_j2me = { git = "https://github.com/dlunch/wie.git" }
wie_util = { git = "https://github.com/dlunch/wie.git" }
